# tauri_system_tray

./: README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
